	PR tree-optimization/29484 	* tree-inline.c (inline_forbidden_p_2): New function. 	(inline_forbidden_p): Disallow inlining if some static var 	has an address of a local LABEL_DECL in its initializer. 	* doc/extend.texi (Labels as Values): Document &&foo behaviour 	vs. inlining.

* gcc.c-torture/execute/20071220-1.c: New test.
	* gcc.c-torture/execute/20071220-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@131300 138bc75d-0d04-0410-961f-82ee72b054a4